# origin_nover

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build-ios.yml
android/app/: build.gradle
assets/test/content/: chapter_i.txt  chapter_ii.txt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/constants/: assets.dart  default_setting.dart
lib/app/database/: app_database.dart
lib/app/l10n/: intl_zh.arb
lib/app/net/: http_client.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/theme/: app_theme.dart  fonts.dart
lib/database/: app_database.dart
lib/pages/home/: view.dart  (+3 more)
lib/util/: platform_utils.dart
lib/utils/: color_utils.dart  dialog_utils.dart  log_utils.dart
lib/widget/: base_confirm.dart  base_toast.dart  gap.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/assets/: book_source.json
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_origin_novel.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_origin_novel.podspec
rust_builder/windows/: CMakeLists.txt
test/: json_path_test.dart  search_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+54 files in other folders)
