[package]
name = "rust_lib_origin_novel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.40", features = ["chrono"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
chrono = "0.4.38"
tokio = { version = "1", features = ["rt"] }